--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,519 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap");
+
+:root {
+  --white: #F6F6F6;
+  --basic: #1d1b1b;
+  --dark-blue: #1B2735;
+  --blue: #2F3A4C;
+  --yellow: #C1B494;
+  --border-radius: 5px;
+  --transition: 0.3s ease;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  color: var(--white) !important;
+  overflow-x: hidden;
+  background-color: var(--dark-blue) !important;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+a {
+  text-decoration: none !important;
+  transition: var(--transition);
+}
+
+h1,
+h2,
+h3 {
+  margin-bottom: 0 !important;
+}
+
+.sec-padding {
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+
+@media (max-width: 768px) {
+  .sec-padding {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+/* end-main */
+
+/* -------------------------------------- */
+
+/* landing-sec */
+.landing-sec {
+  background-image: url('../src/assets/landingPageBG.png');
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: -7px;
+}
+
+.landing-sec .landing-content {
+  padding: 20% 20% 20% 8%;
+}
+
+.landing-sec .landing-content h1 {
+  color: var(--yellow);
+  font-weight: 700;
+  font-size: 46px;
+}
+
+.landing-sec .landing-content span {
+  color: var(--white);
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.landing-sec .landing-content p {
+  color: var(--white);
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  padding-right: 40%;
+}
+
+.play-video-icon {
+  cursor: pointer;
+  max-height: 85px;
+  transition: var(--transition);
+}
+
+.play-video-icon:hover {
+  opacity: .8;
+}
+
+.close-modal {
+  cursor: pointer;
+  font-size: 34px;
+}
+
+.video-modal {
+  height: 100%;
+}
+
+.video-modal .video {
+  height: 85%;
+}
+
+.ReactModal__Content {
+  padding: 0 !important;
+  width: 60%;
+  margin: auto;
+}
+
+.ReactModal__Overlay {
+  background-color: rgb(198 198 198 / 75%) !important;
+}
+
+.close-modal {
+  color: var(--basic);
+}
+
+@media (max-width: 992px) {
+  .landing-sec .landing-content {
+    padding: 35% 5%;
+  }
+
+  .landing-sec .landing-content h1 {
+    font-size: 36px;
+  }
+
+  .landing-sec .landing-content span {
+    font-size: 20px;
+  }
+
+  .landing-sec .landing-content p {
+    font-size: 16px;
+  }
+
+  .play-video-icon {
+    max-height: 60px;
+  }
+}
+
+@media (max-width: 768px) {
+  .landing-sec .landing-content {
+    padding: 50% 0 12% 0;
+  }
+
+  .landing-sec {
+    background-image: url('../src/assets/landing-bg-mobile.webp');
+  }
+
+  .ReactModal__Content {
+    max-height: 65%;
+    width: 75%;
+  }
+
+  .video-modal .video {
+    height: 85%;
+  }
+}
+
+/* end-landing-sec */
+/* ----------------------------------------- */
+
+/* about */
+.about h2 {
+  font-size: 70px;
+  font-weight: 700;
+  opacity: 0.2;
+  color: #ECECEC;
+}
+
+.about h3 {
+  font-size: 44px;
+  font-weight: 700;
+  margin-top: -55px;
+  margin-left: 37px;
+}
+
+.about p {
+  font-size: 18px;
+  letter-spacing: .2px;
+}
+
+.about .social-icons-sec {
+  border-left: 3px solid;
+  padding-left: 15px;
+}
+
+.about .social-icons-sec .social-heading {
+  font-weight: 600;
+  font-size: 22px;
+}
+
+.about .social-icons-sec .social-icons {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  margin-top: 15px;
+}
+
+.about .social-icons-sec .social-icons .icon {
+  color: var(--white);
+  font-size: 18px;
+  font-weight: 500;
+  padding: 3px 6px;
+  background-color: var(--yellow);
+  border-radius: 5px;
+  text-align: center;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  transition: var(--transition);
+}
+
+.about .social-icons-sec .social-icons .icon:hover {
+  opacity: .8;
+}
+
+@media (max-width: 992px) {
+  .about h2 {
+    font-size: 60px;
+  }
+
+  .about h3 {
+    font-size: 40px;
+    margin-top: -50px;
+    margin-left: 32px;
+  }
+
+  .about p {
+    font-size: 16px;
+  }
+
+  .about .social-icons-sec {
+    padding: 0;
+    border: none;
+  }
+
+  .about .social-icons-sec .social-icons .social-heading {
+    font-size: 20px;
+  }
+
+  .about .social-icons-sec .social-icons .icon {
+    font-size: 18px;
+    width: 37px;
+    height: 37px;
+  }
+}
+
+/* end-about */
+/* -------------------------------------- */
+
+/* profile-summary */
+.profile-summary .info {
+  background-color: var(--yellow);
+  color: var(--blue);
+  padding: 5% 8%;
+}
+
+.profile-summary .info p {
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 0;
+}
+
+.profile-summary .img-container {
+  margin-left: 7rem;
+}
+
+.profile-summary .img-container .profile-img {
+  max-width: 100%;
+  margin-top: -30%;
+}
+
+
+@media (max-width: 992px) {
+  .profile-summary .info {
+    padding: 5% 7%;
+  }
+
+  .profile-summary .info p {
+    font-size: 18px;
+  }
+
+  .profile-summary .img-container {
+    margin-left: 5rem;
+  }
+}
+@media (max-width: 768px)  {
+  .profile-summary .img-container {
+    text-align: center;
+    margin-left: 0;
+  }
+  .profile-summary .img-container .profile-img {
+    max-height: 300px;
+    margin-top: 0;
+  }
+}
+
+/* end-profile-summary */
+/* ----------------------------------------------- */
+
+.amazon-book h3 {
+  font-weight: 700;
+  font-size: 36px;
+  margin-bottom: 12px !important;
+}
+
+.amazon-book p {
+  font-size: 20px;
+  margin-bottom: 30px;
+}
+
+.amazon-book .amazon-logo {
+  max-height: 40px;
+}
+
+.amazon-book .book-cover {
+  max-width: 100%;
+}
+
+@media (max-width: 992px) {
+  .amazon-book h3 {
+    font-size: 28px;
+  }
+
+  .amazon-book p {
+    font-size: 16px;
+  }
+
+  .amazon-book .amazon-logo {
+    max-height: 30px;
+  }
+
+  .amazon-book .book-cover {
+    max-height: 400px;
+  }
+}
+
+@media (max-width: 768px) {
+  .amazon-book .book-cover {
+    max-height: 350px;
+  }
+}
+
+/* end-amazon-book */
+/* ------------------------------------------- */
+
+/* article */
+.article {
+  background-image: url(./assets/article-sec-bg.png);
+  background-position: center;
+  min-height: 100vh;
+}
+
+.article .content {
+  position: absolute;
+  top: 33%;
+  left: 50%;
+  width: 100%;
+  transform: translate(-50%, 30%);
+}
+
+.article .content img {
+  max-height: 40px;
+}
+
+.article .content h2 {
+  font-size: 40px;
+}
+
+.article .content h2 span {
+  font-weight: 700;
+  color: var(--yellow);
+}
+
+.article .content a {
+  color: var(--white);
+  font-size: 20px;
+}
+
+.article .content a:hover {
+  color: var(--yellow);
+}
+
+@media (max-width: 992px) {
+  .article .content {
+    top: 35%;
+    transform: translate(-50%, 35%);
+  }
+
+  .article .content h2 {
+    font-size: 28px;
+  }
+
+  .article .content img {
+    max-height: 30px;
+  }
+
+  .article .content a {
+    font-size: 16px;
+  }
+
+}
+
+@media (max-width: 768px) {
+  .article .content {
+    top: 34%;
+    transform: translate(-50%, 33%);
+  }
+}
+
+/* end-article */
+/* ------------------------------------- */
+
+/* acoounts-links */
+.accounts-links {
+  background-color: var(--blue);
+}
+
+.accounts-links .account-card {
+  background-color: var(--white);
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+.accounts-links .account-card .main-img img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+}
+
+.accounts-links .account-card .card-content {
+  padding: 20px 30px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.accounts-links .account-card h3 {
+  color: var(--blue);
+  font-size: 22px;
+  font-weight: 700;
+  margin-bottom: 15px !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.accounts-links .account-card p {
+  color: var(--dark-blue);
+  margin-bottom: 20px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.accounts-links .account-card .link-btn a {
+  color: var(--blue);
+  background-color: var(--yellow);
+  padding: 10px 12px;
+  border-radius: 7px;
+}
+
+.accounts-links .account-card .link-btn a:hover {
+  opacity: .9;
+}
+
+.accounts-links .account-card .card-social-icons {
+  margin-top: 30px;
+}
+
+.accounts-links .account-card .social-links .title {
+  color: var(--blue);
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.accounts-links .account-card .social-links .icons a {
+  color: var(--blue);
+  background-color: #EEE8D9;
+  padding: 4px 8px;
+  border-radius: 5px;
+  margin: 5px;
+}
+
+.accounts-links .account-card .social-links .icons a:hover {
+  background-color: var(--yellow);
+}
+
+@media (max-width: 992px) {
+  .accounts-links .account-card h3 {
+    font-size: 18px;
+  }
+
+  .accounts-links .account-card .social-links .title,
+  .accounts-links .account-card .social-links .icons a {
+    font-size: 16px;
+  }
+
+  .accounts-links .account-card .social-links .icons a {
+    padding: 4px 8px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+@media (max-width: 768px) {
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  .accounts-links .account-card .social-links .title,
+  .accounts-links .account-card .social-links .icons a {
+    font-size: 14px;
   }
 }
+
+/* end-accounts-links */
+/* --------------------------------------------- */
